<resources>
    <string name="core_delete">删除</string>
    <string name="core_wg">所在网格:</string>
    <string name="core_address">地址:</string>
    <string name="update_time">更新时间:</string>
    <string name="create_time">发布时间:</string>
    <string name="to_object">指派对象:</string>

    <string name="shouli">受理</string>
    <string name="fankui">反馈</string>
    <string name="commit">提交</string>

    <string name="fankuiren">反馈人</string>

    <string name="task_title">任务标题:</string>
    <string name="task_info">任务描述:</string>
    <string name="task_type">指派类型:</string>
    <string name="task_type_1">个人</string>
    <string name="task_type_2">部门</string>

    <string name="log_sth">工作事项:</string>
    <string name="log_progress">工作进度:</string>
    <string name="log_des">工作描述:</string>
    <string name="log_des_hint">请输入工作描述</string>

    <string name="house_person_name">姓名:</string>
    <string name="house_person_aname">曾用名:</string>
    <string name="house_person_idnumber">身份证号:</string>
    <string name="house_person_sex">性别:</string>
    <string name="house_person_birthday">出生日期:</string>
    <string name="house_person_mz">民族:</string>
    <string name="house_person_jg">籍贯:</string>
    <string name="house_person_hyzk">婚姻状况:</string>
    <string name="house_person_zzmm">政治面貌:</string>
    <string name="house_person_xl">学历:</string>
    <string name="house_person_zjxy">宗教信仰:</string>
    <string name="house_person_zylb">职业类别:</string>
    <string name="house_person_zy">职业:</string>
    <string name="house_person_fwcs">服务处所:</string>
    <string name="house_person_phone">联系方式:</string>
    <string name="house_person_hjd">户籍地:</string>
    <string name="house_person_hjddz">户籍门（楼）地址:</string>
    <string name="house_person_xzd">现住地:</string>
    <string name="house_person_xzddz">现住门（楼）地址:</string>
    <string name="house_person_rhyz">人户一致标识:</string>
    <string name="house_person_hh">户号:</string>
    <string name="house_person_hzsfz">户主身份号码:</string>
    <string name="house_person_hzname">户主姓名:</string>
    <string name="house_person_hzgx">与户主关系:</string>
    <string name="house_person_hzphone">户主联系方式:</string>
    <string name="house_person_wg">所属网格:</string>
    <string name="house_person_lryy">流入原因:</string>
    <string name="house_person_bzlx">办证类型:</string>
    <string name="house_person_zjhm">证件号码:</string>
    <string name="house_person_djrq">登记日期:</string>
    <string name="house_person_zjdq">证件到期日期:</string>
    <string name="house_person_zslx">住所类型:</string>
    <string name="house_person_sfcz">是否常住人口:</string>
    <string name="house_person_sfzd">是否重点关注人员:</string>

    <string name="xj_person_zpdz">照片地址:</string>

    <string name="xmsf_person_sflf">是否累犯:</string>
    <string name="xmsf_person_yzm">原罪名:</string>
    <string name="xmsf_person_ypxq">原判刑期:</string>
    <string name="xmsf_person_fxcs">服刑场所:</string>
    <string name="xmsf_person_sfrq">释放日期:</string>
    <string name="xmsf_person_wxxpg">危险性评估类型:</string>
    <string name="xmsf_person_xjrq">衔接日期:</string>
    <string name="xmsf_person_xjqk">衔接情况:</string>
    <string name="xmsf_person_azrq">安置日期:</string>
    <string name="xmsf_person_azqk">安置情况:</string>
    <string name="xmsf_person_wazyy">未安置原因:</string>
    <string name="xmsf_person_bjqk">帮教情况:</string>
    <string name="xmsf_person_sfcxfz">是否重新犯罪:</string>
    <string name="xmsf_person_cxfzzm">重新犯罪罪名:</string>


    <string name="social_tyxydm">统一社会信用代码:</string>
    <string name="social_djzh">登记证号:</string>
    <string name="social_shzzmc">社会组织名称:</string>
    <string name="social_qyhy">企业行业:</string>
    <string name="social_clnd">成立年度:</string>
    <string name="social_djgldm">登记管理机关代码:</string>
    <string name="social_fddbr">法定代表人姓名:</string>
    <string name="social_zs">住所:</string>
    <string name="social_pzrq">批准日期:</string>
    <string name="social_shzzlx">社会组织类型:</string>
    <string name="social_zt">状态:</string>
    <string name="social_fzrzzdm">负责人证件代码:</string>
    <string name="social_fzrzzhm">负责人证件号码:</string>
    <string name="social_fzrxm">负责人姓名:</string>
    <string name="social_fzrlxfs">负责人联系方式:</string>
    <string name="social_bgdz">办公地址:</string>
    <string name="social_zbfzrxm">治保负责人姓名:</string>
    <string name="social_zbfzrlxfs">治保负责人联系方式:</string>
    <string name="social_gzcd">关注程度:</string>
    <string name="social_jbjltj">是否具备建立中共党组织条件:</string>
    <string name="social_sfyzgdzz">是否有中共党组织:</string>
    <string name="social_zgdysl">中共党员数量:</string>
    <string name="social_sfygh">是否有工会:</string>
    <string name="social_ghhysl">工会会员数量:</string>
    <string name="social_sfygqtzz">是否有共青团组织:</string>
    <string name="social_gqtysl">共青团团员数量:</string>
    <string name="social_sfyflzz">是否有妇联组织:</string>
    <string name="social_fnsl">妇女数量:</string>
    <string name="social_sfyjwbj">是否有境外背景:</string>
    <string name="social_zjly">资金来源:</string>
    <string name="social_sswg">所属网格:</string>
    <string name="social_jd">经度:</string>
    <string name="social_wd">纬度:</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="unsocial_00">工商执照注册号:</string>
    <string name="unsocial_01">企业名称:</string>
    <string name="unsocial_02">企业类别:</string>
    <string name="unsocial_03">企业行业:</string>
    <string name="unsocial_04">企业地址:</string>
    <string name="unsocial_05">企业联系方式:</string>
    <string name="unsocial_06">企业员工数:</string>
    <string name="unsocial_07">法定代表人证件代码:</string>
    <string name="unsocial_08">法定代表人证件号码:</string>
    <string name="unsocial_09">法定代表人姓名:</string>
    <string name="unsocial_10">法定代表人联系方式:</string>
    <string name="unsocial_11">治保负责人姓名:</string>
    <string name="unsocial_12">治保负责人联系方式:</string>
    <string name="unsocial_13">关注程度:</string>
    <string name="unsocial_14">是否危化企业:</string>
    <string name="unsocial_15">安全隐患类型:</string>
    <string name="unsocial_16">是否具备建立中共党组织条件:</string>
    <string name="unsocial_17">是否有中共党组织:</string>
    <string name="unsocial_18">中共党员数量:</string>
    <string name="unsocial_19">是否有工会:</string>
    <string name="unsocial_20">工会会员数量:</string>
    <string name="unsocial_21">是否有共青团组织:</string>
    <string name="unsocial_22">共青团团员数量:</string>
    <string name="unsocial_23">是否有妇联组织:</string>
    <string name="unsocial_24">成立年度:</string>
    <string name="unsocial_25">所属网格:</string>
    <string name="unsocial_26">经度:</string>
    <string name="unsocial_27">纬度:</string>



    <string name="house_no">户号:</string>
    <string name="house_dw">所在单位:</string>
    <string name="house_xq">所在小区:</string>
    <string name="house_ld">所在楼栋:</string>
    <string name="house_dy">单元:</string>
    <string name="house_lc">楼层:</string>
    <string name="house_fh">房号:</string>
    <string name="house_fwyt">房屋用途:</string>
    <string name="house_address">地址:</string>
    <string name="house_zj">座机:</string>
    <string name="house_remark">备注:</string>
    <string name="house_rent">承租人:</string>
    <string name="rent_no">房屋编号:</string>
    <string name="rent_address">房屋地址:</string>
    <string name="rent_yt">建筑用途:</string>
    <string name="rent_jzmj">建筑面积（平方米）:</string>
    <string name="rent_zjdm">证件代码:</string>
    <string name="rent_zjhm">证件号码:</string>
    <string name="rent_hz">房主姓名:</string>
    <string name="rent_hzphone">房主联系方式:</string>
    <string name="rent_hzaddress">房主现居详址:</string>
    <string name="rent_czyt">出租用途:</string>
    <string name="rent_yhlx">隐患类型:</string>
    <string name="rent_czrsfz">承租人身份号码:</string>
    <string name="rent_czrname">承租人姓名:</string>
    <string name="rent_czrphone">承租人联系方式:</string>

    <string name="word_title">公文标题:</string>
    <string name="word_number">公文字号:</string>
    <string name="word_status">收发状态:</string>
    <string name="word_jjcd">紧急程度:</string>
    <string name="word_users">接收人:</string>
    <string name="word_signer">发送人:</string>
    <string name="word_singn_date">签发时间:</string>
    <string name="word_content">公文内容:</string>
    <string name="word_files">公文文件:</string>

    <string name="sign_bt">签收</string>
    <string name="opinion_hint">请输入意见</string>

    <string name="grid_dw">所在单位:</string>
    <string name="grid_date">创建时间:</string>

    <string name="core_start_date_hint">开始日期</string>
    <string name="core_end_date_hint">结束日期</string>
    <string name="core_choice_month_hint">月份</string>
    <string name="core_choice_dw_hint">请选择单位</string>

    <string name="core_choice_grid_hint">请选择网格</string>
    <string name="jw_ww_xing">外文姓:</string>
    <string name="jw_ww_ming">外文名:</string>
    <string name="jw_zw_name">中文姓名:</string>
    <string name="jw_gjdq">国籍(地区):</string>
    <string name="jw_zjdm">证件类型:</string>
    <string name="jw_zjyxq">证件有效期:</string>
    <string name="jw_lhmd">来华目的:</string>
    <string name="jw_zys">职业:</string>
    <string name="jw_ddrq">抵达日期:</string>
    <string name="jw_yjlk">预计离开日期:</string>

    <string name="hiv_grtj">感染途径:</string>
    <string name="hiv_wffzs">是否有违法犯罪史:</string>
    <string name="hiv_wffzqk">违法犯罪情况:</string>
    <string name="hiv_ajlb">案件类别:</string>
    <string name="hiv_gzlb">关注类型:</string>
    <string name="hiv_bfqk">帮扶情况:</string>
    <string name="hiv_bfname">帮扶人姓名:</string>
    <string name="hiv_bfphone">帮扶人联系方式:</string>
    <string name="hiv_szqk">收治情况:</string>
    <string name="hiv_szjg">收治机构名称:</string>

    <string name="kaohe_type">考核类型:</string>
    <string name="kaohe_date">考核日期:</string>
    <string name="kaohe_finish">完成日期:</string>
    <string name="kaohe_dw">考核单位:</string>
    <string name="kaohe_basic">基本信息</string>
    <string name="kaohe_rule">考核规则</string>
    <string name="kaohe_relation">考核关系</string>
    <string name="kaohe_title">任务标题:</string>
    <string name="kaohe_creat">创建日期:</string>
    <string name="kaohe_update">更新日期:</string>
    <string name="kaohe_fb">发布单位:</string>
    <string name="kaohe_score">考核分数:</string>
    <string name="kaohe_content">规则内容:</string>
    <string name="kaohe_finish_bt">完成</string>
</resources>
