<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/CoreMiddle8Style"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CoreSmaller8Style"
                android:text="@string/kaohe_basic"
                android:background="@color/colorPrimary"
                android:textColor="@color/text_white_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_title"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_type"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_date"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_creat"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_creat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_update"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_update"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CoreSmaller8Style"
                android:text="@string/kaohe_rule"
                android:background="@color/colorPrimary"
                android:textColor="@color/text_white_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_fb"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_org"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_score"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:text="@string/kaohe_content"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/examine_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CoreSmaller8Style"
                android:text="@string/kaohe_relation"
                android:background="@color/colorPrimary"
                android:textColor="@color/text_white_color"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/examine_relation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/frame_two_distance"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>