<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:padding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_sth"
            android:textColor="@color/text_gray_color"
            style="@style/CoreNormal8Style"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_sth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_color"
            style="@style/CoreNormal8Style"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:drawablePadding="@dimen/frame_eight_distance"
            android:drawableEnd="@drawable/ic_arrow_down"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_one_distance"
        android:background="@color/gray_line_color"
        android:layout_marginStart="@dimen/frame_edge_distance"
        android:layout_marginEnd="@dimen/frame_edge_distance"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:padding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_progress"
            android:textColor="@color/text_gray_color"
            style="@style/CoreNormal8Style"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_color"
            style="@style/CoreNormal8Style"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:drawablePadding="@dimen/frame_eight_distance"
            android:drawableEnd="@drawable/ic_arrow_down"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_one_distance"
        android:background="@color/gray_line_color"
        android:layout_marginStart="@dimen/frame_edge_distance"
        android:layout_marginEnd="@dimen/frame_edge_distance"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:padding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_des"
            android:textColor="@color/text_gray_color"
            style="@style/CoreNormal8Style"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/log_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_color"
            style="@style/CoreNormal8Style"
            android:hint="@string/log_des_hint"
            android:gravity="start|top"
            android:minLines="3"
            android:background="@color/transparent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit_bt"
        android:textColor="@color/white"
        android:textSize="@dimen/frame_text_normal_size"
        android:gravity="center"
        android:background="@drawable/shape_blue_btn_bg"
        android:layout_marginStart="@dimen/frame_20_distance"
        android:layout_marginEnd="@dimen/frame_20_distance"
        android:layout_marginTop="@dimen/frame_32_distance"/>
</androidx.appcompat.widget.LinearLayoutCompat>