<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/frame_two_distance"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/frame_one_distance">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/choice_dw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CoreSmall8Style"
                android:textColor="@color/text_gray_color"
                android:gravity="start"
                android:singleLine="true"
                android:ellipsize="end"
                android:drawablePadding="@dimen/frame_eight_distance"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:hint="@string/core_choice_grid_hint"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/frame_one_distance"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/start_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:textColor="@color/text_gray_color"
                    android:gravity="center"
                    android:drawablePadding="@dimen/frame_eight_distance"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:hint="@string/core_start_date_hint"
                    android:singleLine="true"
                    android:ellipsize="end"/>
                <View
                    android:layout_width="@dimen/frame_one_distance"
                    android:layout_height="@dimen/frame_edge_distance"
                    android:background="@color/gray_line_color"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/end_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/CoreSmall8Style"
                    android:textColor="@color/text_gray_color"
                    android:gravity="center"
                    android:drawablePadding="@dimen/frame_eight_distance"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:hint="@string/core_end_date_hint"
                    android:singleLine="true"
                    android:ellipsize="end"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.appcompat.widget.LinearLayoutCompat>