<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/frame_four_distance"
    android:background="@color/gray_line_color">
    <androidx.cardview.widget.CardView
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="@dimen/frame_eight_distance"
        android:foreground="?selectableItemBackground"
        app:cardElevation="@dimen/frame_one_distance"
        android:layout_marginBottom="@dimen/frame_two_distance">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_eight_distance">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_black_color"
                    style="@style/CoreNormal8Style"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/core_delete"
                    style="@style/CoreSmall8Style"
                    android:textColor="@color/text_color_red2pri_selector"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_color"
                    android:text="@string/house_rent"
                    style="@style/CoreSmall8NoTopBottomStyle"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_house_rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_color"
                    style="@style/CoreSmall8NoTopBottomStyle"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_color"
                    style="@style/CoreSmall8Style"
                    android:text="@string/core_wg"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_wg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_color"
                    style="@style/CoreSmall8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>